# Abel-alpha

./: .gitignore  README.md  SKILL.md  pyproject.toml
abel_alpha/: __init__.py  __main__.py  _legacy.py  cli.py  doctor.py  edge_runtime.py  env.py  narrative.py  narrative_impl.py  workspace.py
agents/: openai.yaml
references/: branch-authoring.md  constraints.md  discovery-protocol.md  experiment-loop.md  methodology.md  proven-patterns.md
research/aapl/hot-ai-20260415/: README.md  discovery.json  events.tsv
research/aapl/hot-ai-20260415-r2/: README.md  discovery.json  events.tsv
research/amd/hot-ai-20260415/: README.md  discovery.json  events.tsv
research/amd/hot-ai-20260415-r2/: README.md  discovery.json  events.tsv
research/amzn/hot-ai-20260415/: README.md  discovery.json  events.tsv
research/amzn/hot-ai-20260415-r2/: README.md  discovery.json  events.tsv
research/avgo/hot-ai-20260415/: README.md  discovery.json  events.tsv
research/avgo/hot-ai-20260415-r2/: README.md  discovery.json
research/googl/hot-ai-20260415/: README.md  discovery.json  events.tsv
research/googl/hot-ai-20260415-r2/: README.md  discovery.json  events.tsv
research/intc/hot-ai-20260415/: README.md  discovery.json  events.tsv
research/intc/hot-ai-20260415-r2/: README.md  discovery.json  events.tsv
research/meta/hot-ai-20260415-r2/: README.md  discovery.json  events.tsv
scripts/: bootstrap_workspace.py  research_narrative.py
tests/: test_branch_runtime.py  test_doctor.py  test_frontier_runtime.py  test_memory_refactor.py  test_workspace.py
(+164 files in other folders)
