[project]
name = "abel-alpha"
version = "3.3.0"
description = "Workspace-oriented research orchestration for Abel-driven alpha discovery"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "causal-edge>=0.5.0",
    "PyYAML>=6.0",
]

[project.scripts]
abel-alpha = "abel_alpha.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["abel_alpha*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
