[project]
name = "abel-alpha"
version = "3.3.1"
description = "Workspace-oriented research orchestration for Abel-driven alpha discovery"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "causal-edge>=0.5.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
abel-alpha = "abel_alpha.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["abel_alpha*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
